[package]
name = "orchix"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = { version = "1.0", features = ["serde"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
config = "0.14"
toml = "0.8"
futures = "0.3"
tokio-stream = "0.1"
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"
hex = "0.4"
